examples/test/testpolicy15527.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15527
  namespace: namespace108
spec:
  podSelector:
    matchLabels:
      key10: value16
      key40: value42
      key31: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value46
          key19: value30
      podSelector:
        matchLabels:
          key24: value43
          key46: value41
